# tinygrad_unet

./: .gitignore  README.md  __init__.py  constants.py  export2onnx.py  model.py  preview.py  pyproject.toml  requirements.txt  segment_tinygrad.py  segment_tinygrad_onnx.py  segment_torch.py  torch_to_tinygrad.py  train.py
src/unet_tinygrad/: compare_weights.py  constants.py  model.py  segment_tinygrad.py  segment_torch.py  torch_to_tinygrad.py
