[project]
name = "unet-tinygrad"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Thiago Franco de Moraes", email = "totonixsame@gmail.com" }
]
dependencies = [
    "tinygrad @ git+https://github.com/tinygrad/tinygrad.git",
    "nibabel>=5.1.0",
    "torch>=2.0.1",
    "vtk>=9.2.6",
    "tqdm>=4.65.0",
    "pyobjc-framework-Metal>=9.2",
    "pyobjc-framework-Cocoa>=9.2",
    "pyobjc-framework-libdispatch>=9.2",
    "pydot>=1.4.2",
    "wgpu>=0.9.4",
    "setuptools>=68.0.0",
    "llvmlite>=0.40.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython~=8.12.2",
]

[tool.hatch.metadata]
allow-direct-references = true
