[project]
name = "tinygrad-unet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llvmlite>=0.44.0",
    "nibabel>=5.3.2",
    "tinygrad",
    "tqdm>=4.67.1",
    "vtk>=9.4.2",
]

[tool.uv.sources]
tinygrad = { git = "https://github.com/tinygrad/tinygrad.git" }
